--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -7,7 +7,7 @@
     {{ $css := resources.Get "main.css" }}
     {{ $css = $css | css.PostCSS }}
     {{ $css = $css | minify | fingerprint }}
-    <link rel="stylesheet" href="{{ $css.RelPermalink }}">    
+    <link rel="stylesheet" href="{{ .Site.BaseURL }}{{ $css.RelPermalink }}">
 </head>
 <body class="min-h-screen flex flex-col">
     {{ partial "header.html" . }}
