fix hero for githyb with relURL image

--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -5,7 +5,7 @@
         <div class="absolute inset-0 bg-primary-600"></div>
         <!-- Image positioned on the right side -->
         <div class="absolute top-0 right-0 bottom-0 w-1/2 hidden md:block">
-            <img src="/images/BTN_picture.jpg" alt="Background" 
+            <img src={{ "/images/BTN_picture.jpg" | relURL }} alt="Background" 
                 class="w-full h-full object-cover object-center"
                 style="clip-path: polygon(20% 0, 100% 0, 100% 100%, 0% 100%);">
         </div>
