--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,7 +11,7 @@
 </head>
 <body class="min-h-screen flex flex-col">
     {{ partial "header.html" . }}
-    <main class="flex-grow">
+    <main class="flex-grow pt-16">
         {{ block "main" . }}{{ end }}
     </main>
     {{ partial "footer.html" . }}
