--- a/layouts/shortcodes/services-list.html
+++ b/layouts/shortcodes/services-list.html
@@ -13,10 +13,10 @@
                 <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">Advisory Services</h2>
                 <div class="prose max-w-none">
                     <ul>
-                        <li><b>Develop a clear AI roadmap aligned with your business goals.</b> I'll work closely with you to assess your organization's current state, identify high-impact AI use cases, and create a tailored roadmap for successful implementation.</li>
-                        <li><b>Navigate the technical complexities of AI adoption with confidence.</b> I'll provide expert guidance on data strategy, technology selection, and ethical considerations, ensuring a smooth and responsible AI journey.</li>
-                        <li><b>Build a sustainable AI strategy for long-term success.</b> I'll help you foster an AI-ready culture, develop internal capabilities, and establish robust governance frameworks to ensure your AI initiatives deliver lasting value.</li>
-                        <li><b>Quantify the value of AI investments.</b> I'll help you assess the potential return on investment (ROI) for different AI initiatives, enabling you to make data-driven decisions and prioritize projects with the highest impact.</li>
+                        <li><b>Develop a clear AI roadmap aligned with your business goals.</b> We work closely with you to assess your organization's current state, identify high-impact AI use cases, and create a tailored roadmap for successful implementation.</li>
+                        <li><b>Navigate the technical complexities of AI adoption with confidence.</b> We provide expert guidance on data strategy, technology selection, and ethical considerations, ensuring a smooth and responsible AI journey.</li>
+                        <li><b>Build a sustainable AI strategy for long-term success.</b> We help you foster an AI-ready culture, develop internal capabilities, and establish robust governance frameworks to ensure your AI initiatives deliver lasting value.</li>
+                        <li><b>Quantify the value of AI investments.</b> We help you assess the potential return on investment (ROI) for different AI initiatives, enabling you to make data-driven decisions and prioritize projects with the highest impact.</li>
                     </ul>
                 </div>
             </div>
@@ -35,8 +35,8 @@
                 <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">Training Services</h2>
                 <div class="prose max-w-none">
                     <ul>
-                        <li><b>Become a confident and informed leader in the age of AI.</b> Through executive coaching and bespoke training programs, I'll equip you with the knowledge and skills to lead your organization's AI transformation.</li>
-                        <li><b>Empower your teams with the AI skills and knowledge they need.</b> I offer tailored training programs designed to upskill your workforce and foster a data-driven and AI AI-ready culture.</li>
+                        <li><b>Become a confident and informed leader in the age of AI.</b> Through executive coaching and bespoke training programs, we equip you with the knowledge and skills to lead your organization's AI transformation.</li>
+                        <li><b>Empower your teams with the AI skills and knowledge they need.</b> We offer tailored training programs designed to upskill your workforce and foster a data-driven and AI AI-ready culture.</li>
                     </ul>
                 </div>
             </div>
@@ -55,9 +55,9 @@
                 <h2 class="text-2xl md:text-3xl font-bold text-gray-900 mb-4">AI Workflows</h2>
                 <div class="prose max-w-none">
                     <ul>
-                        <li><b>Transform your end-to-end business processes with custom AI solutions.</b> I'll work with you to identify opportunities for automation, optimization, and innovation across your entire value chain.</li>
-                        <li><b>Reduce costs, optimize time, and increase quality.</b> I improve the outcomes you care about by using the appropriate AI tools, without the need for you to become an expert.</li>
-                        <li><b>Deploy solutions on your terms with transparent costs.</b> Whether you need on-premise, air-gapped, or cloud-based solutions, I'll ensure deployment aligns with your risk tolerance and budget, with full cost transparency.</li>
+                        <li><b>Transform your end-to-end business processes with custom AI solutions.</b> We work with you to identify opportunities for automation, optimization, and innovation across your entire value chain.</li>
+                        <li><b>Reduce costs, optimize time, and increase quality.</b> We improve the outcomes you care about by using the appropriate AI tools, without the need for you to become an expert.</li>
+                        <li><b>Deploy solutions on your terms with transparent costs.</b> Whether you need on-premise, air-gapped, or cloud-based solutions, we ensure deployment aligns with your risk tolerance and budget, with full cost transparency.</li>
                     </ul>
                 </div>
             </div>
