--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -11,6 +11,7 @@
     gtag('config', 'G-K8ETJZK09R');
     </script>
     <meta charset="UTF-8">
+    <meta name="description" content="BTN Advisory - executive advice, leadership training and AI workflows to deliver your business goals">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ if .IsHome }}BTN Advisory{{ else }}{{ .Title }} - BTN Advisory{{ end }}</title>
     {{ $css := resources.Get "main.css" }}
